# PWDManager

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE.md  README.md  RELEASE_NOTES.md  TODO.md  _config.yml  add_license.py  build.rs  package-lock.json  package.json  propt  tailwind.config.js
.github/workflows/: virustotal-scan.yml
.superpowers/brainstorm/502-1775153267/: .server-stopped  dashboard.html  move-clone-v2.html  move-clone.html  my-vaults-v2.html  my-vaults.html  navbar.html
assets/: _config.yml  blacklist.txt  input_main.css  tailwind.css
custom_errors/: Cargo.toml
custom_errors/src/: lib.rs
docs/: AUTO_UPDATE_DIOXUS.md  HOW_TO_MOVE_TO_THREAD.md  code_analysis_refactoring.md  dioxus-fork-patch.md  howto_sqlitetemplate.md  library-extraction-analysis.md  nsis-custom-template.md  orchestrator-status.md  password_strength_levels.md  security.md  tailwind_v4_migration_guide.md  testable_passwords.txt
docs/DaisyUI/: dialog modal.md  modal.css
docs/dioxus/: dioxus-core-concepts.xml  dioxus-guide.xml  test_rollback.md
docs/ideas/: browser_extension.md
docs/plans/: 2025-02-15-password-handler-design.md  2026-02-13-db-backend-tests-design.md  2026-02-13-db-backend-tests-implementation.md  2026-02-15-password-handler-design.md  2026-02-15-password-handler-implementation.md  2026-02-18-svg-components-design.md  2026-02-18-svg-components-implementation.md  2026-02-19-password-display-design.md  2026-02-19-password-display.md  2026-02-19-user-settings-automation-design.md  2026-02-19-user-settings-automation-implementation.md  2026-02-24-encrypt-location-notes.md  2026-02-24-secret-all-fields.md  2026-02-26-extract-pwd-crypto.md  2026-02-26-extract-pwd-strength.md  2026-02-26-extract-pwd-types.md  2026-02-26-library-extraction-orchestrator.md  2026-02-27-extract-pwd-dioxus.md  2026-02-27-pwd-dioxus-architecture.md  2026-02-27-pwd-dixous-crate-analysis.md  2026-02-27-pwd-dixous-crate-issues.md  2026-02-27-pwd-dixous-crate.md  2026-03-03-migration-progress-design.md  2026-03-03-migration-progress-implementation.md  2026-03-05-dashboard-pagination-design.md  2026-03-05-dashboard-pagination-orchestration.md  2026-03-06-dashboard-aside-fix-design.md  2026-03-06-dashboard-aside-fix-implementation.md  2026-03-06-export-frontend-implementation.md  2026-03-06-import-frontend-implementation.md  2026-03-06-password-export-implementation.md  2026-03-06-password-import-implementation.md  2026-03-13-phase-1-db-backend-queries.md  2026-03-13-phase-2-password-utils.md  2026-03-13-phase-3-migration-pipeline.md  2026-03-13-phase-4-export-pipeline.md  2026-03-13-phase-5-import-pipeline.md  2026-03-13-phase-6-tests.md  2026-03-13-phase-7-verification.md
docs/plans/pagination-tasks/: task-1-database-layer.md  task-2-pagination-state.md  task-3-pagination-controls.md  task-4-dashboard-integration.md  task-5-stats-aside-update.md  task-6-module-export.md
docs/superpowers/plans/: 2026-03-12-table-ordering-frontend.md  2026-03-17-dashboard-search-filter.md  2026-03-17-theme-toggle.md  2026-03-18-dark-theme.md  2026-03-18-diceware.md  2026-03-19-auto-updater.md  2026-03-19-tabs-restyling.md  2026-03-20-keyring-sqlcipher.md  2026-03-21-recovery-key.md  2026-03-22-review-fixes.md  2026-03-23-dev-prod-keyring.md  2026-03-28-autostart.md  2026-04-02-vaults-plan.md  2026-04-03-dashboard-improvements-plan.md
docs/superpowers/specs/: 2026-03-12-table-ordering-frontend-design.md  2026-03-17-dashboard-search-filter-design.md  2026-03-17-theme-toggle-design.md  2026-03-18-diceware-design.md  2026-03-19-auto-updater-design.md  2026-03-19-tabs-restyling-design.md  2026-03-21-recovery-key-design.md  2026-03-22-review-fixes-design.md  2026-03-23-dev-prod-keyring-design.md  2026-03-28-autostart-design.md  2026-04-02-vaults-design.md  2026-04-03-dashboard-improvements-design.md
examples/: generate_test_passwords.rs
gui_launcher/: Cargo.toml
gui_launcher/src/: lib.rs
installer/: custom-installer.nsi  nsis-hooks.nsh
keys/: update-public.key
pwd-crypto/: Cargo.toml
pwd-crypto/src/: lib.rs
pwd-dioxus/: Cargo.toml
pwd-dioxus/src/: lib.rs
pwd-strength/: Cargo.toml
pwd-types/: Cargo.toml
pwd-types/src/: lib.rs
scripts/: build-updater-artifacts.sh  release.sh
src/: auth.rs  backend.rs  lib.rs  main.rs
src/backend/: auto_start.rs  avatar_utils.rs  db_backend.rs  db_backend_coverage_tests.rs  db_backend_tests.rs  db_key.rs  db_settings_tests.rs  export.rs  export_data.rs  export_tests.rs  export_types.rs  hello_auth.rs  import.rs  import_data.rs  import_tests.rs  init_queries.rs  migration_types.rs  mod.rs  password_types_helper.rs  password_utils.rs  password_utils_tests.rs  settings_types.rs  setup.rs  strength_utils.rs  test_helpers.rs  ui_utils.rs  updater.rs  updater_types.rs  user_auth_helper.rs  utils.rs  vault_utils.rs  vault_utils_tests.rs
src/backend/auto_start/: linux.rs  mod.rs  windows.rs
src/components/: mod.rs
src/components/features/: aspect_settings.rs  bulk_action_bar.rs  dashboard.rs  dashboard_menu.rs  diceware_settings.rs  export_data.rs  export_progress.rs  general_settings.rs  import_data.rs  import_progress.rs  landing.rs  login.rs  logout.rs  mod.rs  my_vaults.rs  progress_chn.rs  progress_migration.rs  recovery_key_settings.rs  register_user.rs  settings.rs  storedpassword_settings.rs  update_notification.rs  upsert_user.rs  welcome.rs
src/components/features/my_vaults/: mod.rs  page.rs  vault_card.rs
src/components/globals/: action_buttons.rs  auth_wrapper.rs  avatar_selector.rs  form_field.rs  mod.rs  navbar.rs  pagenotfound.rs  route_wrapper.rs  stat_card.rs  stats_aside.rs  style.rs  toast_hub.rs  toasts.rs  types.rs
src/components/globals/dialogs/: base_modal.rs  breaking_change_dialog.rs  clone_to_vault_dialog.rs  database_reset.rs  export_progress.rs  export_warning.rs  import_progress.rs  import_warning.rs  migration_progress.rs  migration_warning.rs  mod.rs  move_to_vault_dialog.rs  recovery_key_input.rs  recovery_key_regenerate.rs  recovery_key_setup.rs  stored_all_passwords_deletion.rs  stored_password_deletion.rs  user_deletion.rs  (+6 more)
(+26 files in other folders)
