[package]
name = "PWDManager"
version = "0.2.0"
edition = "2024"

[lib]
name = "pwd_manager"
path = "src/lib.rs"

[[bin]]
name = "PWDManager"
path = "src/main.rs"

[dependencies]
image = { version = "0.25.9", features = ["png"] }
gui-launcher = { path = "gui_launcher" }

# Librerie pubblicate su GitHub
custom_errors = { git = "https://github.com/LucioPg/custom_errors" }
pwd-types = { git = "https://github.com/LucioPg/pwd-types", features = ["sqlx", "generator"] }
pwd-strength = { git = "https://github.com/LucioPg/pwd-strength", features = ["async", "tracing"] }
pwd-crypto = { git = "https://github.com/LucioPg/pwd-crypto", features = ["full", "base64", "pwd-types"] }
pwd-dioxus = { git = "https://github.com/LucioPg/pwd-dioxus", branch = "main", features = ["handler", "secret-display", "modal", "icons-visibility", "icons-action", "icons-alert", "toast", "toggle", "combobox"] }
diceware = { git = "https://github.com/LucioPg/diceware.git" }
sys-locale = "0.2"

# Dipendenze esterne
tracing = "0.1.44"
dioxus = { version = "0.7.3", features = ["desktop", "router"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.49.0", features = ["full", "tracing"] }
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
base64 = "0.22.1"
rfd = "0.17.2"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
secrecy = "0.10.3"
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
sqlx-template = "0.2.1"
futures = "0.3"
rayon = "1.11.0"
tokio-util = { version = "0.7.18", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[workspace]
members = ["gui_launcher", "."]

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
# ide-only serve per fare in modo che la ide analizzi il codice normalmente ma il compilatore non tenterà di compilare
# utile per avere highlight mentre si lavora su elementi non ancora completati. (ricordarsi di attivare la feature nel pannello di cargo della ide)
ide-only = []

# da rimuovere per la release

[patch."https://github.com/LucioPg/custom_errors"]
custom_errors = { path = "../custom_errors" }

[patch."https://github.com/LucioPg/pwd-types"]
pwd-types = { path = "../pwd-types" }

[patch."https://github.com/LucioPg/pwd-strength"]
pwd-strength = { path = "../pwd-strength" }

[patch."https://github.com/LucioPg/pwd-crypto"]
pwd-crypto = { path = "../pwd-crypto" }

[patch."https://github.com/LucioPg/pwd-dioxus"]
pwd-dioxus = { path = "../pwd-dioxus" }

[patch."https://github.com/LucioPg/diceware"]
diceware = { path = "../diceware/diceware" }