[package]
name = "PWDManager"
version = "0.2.5"
edition = "2024"
license-file = "LICENSE.md"

[lib]
name = "pwd_manager"
path = "src/lib.rs"

[[bin]]
name = "PWDManager"
path = "src/main.rs"

[dependencies]
image = { version = "0.25.9", features = ["png"] }
gui-launcher = { path = "gui_launcher" }

# Librerie pubblicate su GitHub
custom_errors = { git = "https://github.com/LucioPg/custom_errors" }
pwd-types = { git = "https://github.com/LucioPg/pwd-types", features = ["sqlx", "generator"] }
pwd-strength = { git = "https://github.com/LucioPg/pwd-strength", features = ["async", "tracing"] }
pwd-crypto = { git = "https://github.com/LucioPg/pwd-crypto", features = ["full", "base64", "pwd-types"] }
pwd-dioxus = { git = "https://github.com/LucioPg/pwd-dioxus", branch = "main", features = ["handler", "secret-display", "modal", "icons-visibility", "icons-action", "icons-alert", "toast", "toggle", "combobox"] }
diceware = { git = "https://github.com/LucioPg/diceware.git" }

# Dipendenze esterne
tracing = "0.1.44"
dioxus = { version = "0.7.4", features = ["desktop", "router"] }
tray-icon = "0.21"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.49.0", features = ["full", "tracing"] }
argon2 = { version = "0.5.3", features = ["std", "zeroize"] }
base64 = "0.22.1"
rfd = "0.17.2"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
secrecy = "0.10.3"
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
sqlx-template = "0.2.1"
futures = "0.3"
rayon = "1.11.0"
tokio-util = { version = "0.7.18", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = "0.4"
sys-locale = "0.2"


# DB Encryption
keyring = { version = "3", features = ["windows-native"] }
rand = "0.9"
winreg = "0.55"

# Updater
reqwest = { version = "0.12", features = ["json", "stream"] }
semver = "1"
zip = "2"
minisign-verify = "0.2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0"

[workspace]
members = ["gui_launcher", "."]

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
# ide-only serve per fare in modo che la ide analizzi il codice normalmente ma il compilatore non tenterà di compilare
# utile per avere highlight mentre si lavora su elementi non ancora completati. (ricordarsi di attivare la feature nel pannello di cargo della ide)
ide-only = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2